Adding in all the correct links

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://ag1479.github.io/yumi-tech/"
+                      target="_blank"
                       ><img
                         src="./img/yumi-tech.png"
                         class="img-fluid portfolioImages fade-content"
@@ -145,13 +147,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://github.com/ag1479/yumi-tech"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://ag1479.github.io/yumi-tech/"
                       target="_blank"
                       >View site</a
                     >
@@ -159,7 +161,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://ag1479.github.io/newsletter/"
+                      target="_blank"
                       ><img
                         src="./img/newsletter.png"
                         class="img-fluid portfolioImages fade-content"
@@ -171,13 +175,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://github.com/ag1479/newsletter"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://ag1479.github.io/newsletter/"
                       target="_blank"
                       >View site</a
                     >
@@ -186,7 +190,9 @@
 
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://ag1479.github.io/online-receipt/."
+                      target="_blank"
                       ><img
                         src="./img/billing.png"
                         class="img-fluid portfolioImages fade-content"
@@ -198,13 +204,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://github.com/ag1479/online-receipt"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://ag1479.github.io/online-receipt/."
                       target="_blank"
                       >View site</a
                     >
@@ -212,7 +218,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://ag1479.github.io/iPhone-11/"
+                      target="_blank"
                       ><img
                         src="./img/iphone11.png"
                         class="img-fluid portfolioImages fade-content"
@@ -224,13 +232,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://github.com/ag1479/iPhone-11"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://ag1479.github.io/iPhone-11/"
                       target="_blank"
                       >View site</a
                     >
@@ -241,7 +249,9 @@
                 </h2>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://ag1479.github.io/sujatas-bakery/"
+                      target="_blank"
                       ><img
                         src="./img/sis.png"
                         class="img-fluid portfolioImages fade-content"
@@ -253,13 +263,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://github.com/ag1479/sujatas-bakery"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://ag1479.github.io/sujatas-bakery/"
                       target="_blank"
                       >View site</a
                     >
@@ -267,7 +277,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://ag1479.github.io/Image-gallery-site/."
+                      target="_blank"
                       ><img
                         src="./img/image-gallery.jpg"
                         class="img-fluid portfolioImages fade-content"
@@ -279,13 +291,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://github.com/ag1479/Image-gallery-site"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="#"
+                      href="https://ag1479.github.io/Image-gallery-site/."
                       target="_blank"
                       >View site</a
                     >
