--- a/index.html
+++ b/index.html
@@ -95,27 +95,19 @@
             <br />
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                <i
-                  class="fab fa-html5 html5Icon frontEndIcons fade-content"
-                ></i>
+                <i class="fab fa-html5 html5Icon frontEndIcons"></i>
                 <h3 class="frontEndElements">HTML5</h3>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                <i
-                  class="fab fa-css3-alt css3Icon frontEndIcons fade-content"
-                ></i>
+                <i class="fab fa-css3-alt css3Icon frontEndIcons"></i>
                 <h3 class="frontEndElements">CSS3</h3>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                <i
-                  class="fab fa-js javascriptIcon frontEndIcons fade-content"
-                ></i>
+                <i class="fab fa-js javascriptIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">Javascript</h3>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                <i
-                  class="fab fa-react reactIcon frontEndIcons fade-content"
-                ></i>
+                <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
               </div>
             </div>
@@ -138,7 +130,7 @@
                       target="_blank"
                       ><img
                         src="./img/yumi-tech.png"
-                        class="img-fluid portfolioImages fade-content"
+                        class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
                       Promotional E-mail (Made with: HTML & CSS)
@@ -166,7 +158,7 @@
                       target="_blank"
                       ><img
                         src="./img/newsletter.png"
-                        class="img-fluid portfolioImages fade-content"
+                        class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
                       Newsletter E-mail (Made with: HTML & CSS)
@@ -195,7 +187,7 @@
                       target="_blank"
                       ><img
                         src="./img/billing.png"
-                        class="img-fluid portfolioImages fade-content"
+                        class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
                       Transactional E-mail (Made with: HTML & CSS)
@@ -223,7 +215,7 @@
                       target="_blank"
                       ><img
                         src="./img/iphone11.png"
-                        class="img-fluid portfolioImages fade-content"
+                        class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
                       Promotional E-mail (Made with: HTML & CSS)
@@ -254,7 +246,7 @@
                       target="_blank"
                       ><img
                         src="./img/sis.png"
-                        class="img-fluid portfolioImages fade-content"
+                        class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
                       Landing page (Made with: HTML, CSS and Bootstrap 4)
@@ -282,7 +274,7 @@
                       target="_blank"
                       ><img
                         src="./img/image-gallery.jpg"
-                        class="img-fluid portfolioImages fade-content"
+                        class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
                       Image gallery site (Made with: HTML, CSS and Bootstrap 4)
@@ -317,25 +309,25 @@
               <div id="row-width" class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
                   <a href="https://www.linkedin.com/in/ashik-gurung-4b4015108/"
-                    ><i class="fab fa-linkedin fade-content"></i
+                    ><i class="fab fa-linkedin"></i
                   ></a>
                   <p class="paragraphs">Linkedin</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
                   <a href="www.twitter.com/a_g1114"
-                    ><i class="fab fa-twitter-square fade-content"></i
+                    ><i class="fab fa-twitter-square"></i
                   ></a>
                   <p class="paragraphs">Twitter</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
                   <a href="mailto:itsashikgurung@gmail.com"
-                    ><i class="fas fa-envelope-square fade-content"></i
+                    ><i class="fas fa-envelope-square"></i
                   ></a>
                   <p class="paragraphs">E-mail</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
                   <a href="https://github.com/ag09"
-                    ><i class="fab fa-github-square fade-content"></i
+                    ><i class="fab fa-github-square"></i
                   ></a>
                   <p class="paragraphs">Github</p>
                 </div>
