Updated the correct url links

--- a/index.html
+++ b/index.html
@@ -308,13 +308,13 @@
             <div class="contact-details">
               <div id="row-width" class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
-                  <a href="https://www.linkedin.com/in/ashik-gurung-4b4015108/"
+                  <a href="https://www.linkedin.com/in/ashik-gurung-1b6aa3192/"
                     ><i class="fab fa-linkedin"></i
                   ></a>
                   <p class="paragraphs">Linkedin</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
-                  <a href="www.twitter.com/a_g1114"
+                  <a href="https://twitter.com/AG0932988842"
                     ><i class="fab fa-twitter-square"></i
                   ></a>
                   <p class="paragraphs">Twitter</p>
@@ -326,7 +326,7 @@
                   <p class="paragraphs">E-mail</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
-                  <a href="https://github.com/ag09"
+                  <a href="https://github.com/ag1479"
                     ><i class="fab fa-github-square"></i
                   ></a>
                   <p class="paragraphs">Github</p>
