--- a/index.html
+++ b/index.html
@@ -308,13 +308,15 @@
             <div class="contact-details">
               <div id="row-width" class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
-                  <a href="https://www.linkedin.com/in/ashik-gurung-1b6aa3192/"
+                  <a
+                    href="https://www.linkedin.com/in/ashik-gurung-1b6aa3192/"
+                    target="_blank"
                     ><i class="fab fa-linkedin"></i
                   ></a>
                   <p class="paragraphs">Linkedin</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
-                  <a href="https://twitter.com/AG0932988842"
+                  <a href="https://twitter.com/AG0932988842" target="_blank"
                     ><i class="fab fa-twitter-square"></i
                   ></a>
                   <p class="paragraphs">Twitter</p>
@@ -326,7 +328,7 @@
                   <p class="paragraphs">E-mail</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
-                  <a href="https://github.com/ag1479"
+                  <a href="https://github.com/ag1479" target="_blank"
                     ><i class="fab fa-github-square"></i
                   ></a>
                   <p class="paragraphs">Github</p>
@@ -343,7 +345,7 @@
         <div class="row">
           <div class="col-lg-12">
             <p class="footer-paragraph">
-              Copyright &copy; 2018&nbsp;&bull; Ashik
+              Copyright &copy; 2019&nbsp;&bull; Ashik
               Gurung&nbsp;&bull;&nbsp;London based Front-End Web Developer
             </p>
           </div>
