--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
-                      href="https://ag1479.github.io/Image-gallery-site/"
+                      href="https://ag1479.github.io/image-gallery-site/"
                       target="_blank"
                       ><img
                         src="./img/image-gallery.jpg"
@@ -289,7 +289,7 @@
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/Image-gallery-site/"
+                      href="https://ag1479.github.io/image-gallery-site/"
                       target="_blank"
                       >View site</a
                     >
