Updated one of the projects image

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                       href="https://ag1479.github.io/sujatas-bakery/"
                       target="_blank"
                       ><img
-                        src="./img/sis.png"
+                        src="./img/sujatas-bakery.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
