--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Hello,</h1>
         <h1>
           my name is <span class="name-highlight">Ashik Gurung </span><br />
-          and I'm a front-end developer.
+          and I'm a HTML Email developer.
         </h1>
         <div class="buttonWrapper">
           <a class="button" href="#about-page">Click here for more info</a>
@@ -84,9 +84,9 @@
             <p class="paragraphs">
               As of now living in London, I am an Information Technology
               graduate who is passionate about making responsive and
-              user-friendly websites/html emails. For just over a year now I
-              have been getting the hang of everything there is to about the
-              front-end side of web development. You can view my work
+              user-friendly websites/html email newletters. For just over a year
+              now I have been getting the hang of everything there is to about
+              the front-end side of web development. You can view my work
               <a class="portfolio-link" href="#portfolio-page">here</a> to get a
               better idea of how much I know.
             </p>
@@ -249,7 +249,7 @@
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Landing page (Made with: HTML, CSS and Bootstrap 4)
+                      Online cake shop (Made with: HTML, CSS and Bootstrap 4)
                     </figcaption>
                   </figure>
                   <div class="text-center">
@@ -346,7 +346,7 @@
           <div class="col-lg-12">
             <p class="footer-paragraph">
               Copyright &copy; 2019&nbsp;&bull; Ashik
-              Gurung&nbsp;&bull;&nbsp;London based Front-End Web Developer
+              Gurung&nbsp;&bull;&nbsp;London based HTML Email Developer
             </p>
           </div>
         </div>
