--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <p class="paragraphs">
               As of now living in London, I am an Information Technology
               graduate who is passionate about making responsive and
-              user-friendly websites/html email newsletters. For just over a
-              year now I have been getting the hang of everything there is to
-              about the front-end side of web development. You can view my work
+              user-friendly websites/html emails. For just over a year now I
+              have been getting the hang of everything there is to about the
+              front-end side of web development. You can view my work
               <a class="portfolio-link" href="#portfolio-page">here</a> to get a
               better idea of how much I know.
             </p>
