--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Hello,</h1>
         <h1>
           my name is <span class="name-highlight">Ashik Gurung </span><br />
-          and I'm a HTML Email developer.
+          and I'm a Front end developer.
         </h1>
         <div class="buttonWrapper">
           <a class="button" href="#about-page">Click here for more info</a>
@@ -346,7 +346,7 @@
           <div class="col-lg-12">
             <p class="footer-paragraph">
               Copyright &copy; 2019&nbsp;&bull; Ashik
-              Gurung&nbsp;&bull;&nbsp;London based HTML Email Developer
+              Gurung&nbsp;&bull;&nbsp;London based Front-end Developer
             </p>
           </div>
         </div>
