--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
             <br />
             <p class="paragraphs">
               Information Technology graduate who is passionate about making
-              responsive and user-friendly websites/html emails. For just over a
-              year now I have been getting the hang of everything there is to
-              about the front-end side of web development. You can view my work
-              <a class="portfolio-link" href="#portfolio-page">here</a> to get a
-              better idea of how much I know.
+              responsive and user-friendly websites/html emails. For a little
+              over a year now, I've been studying the front-end side of web
+              development. To get a better idea of how much I know, you can view
+              my work <a class="portfolio-link" href="#portfolio-page">here</a>.
             </p>
             <br />
             <h2 class="subHeadings">My skills</h2>
