Edited the right image file name

--- a/index.html
+++ b/index.html
@@ -299,11 +299,12 @@
                       href="https://ag1479.github.io/rock-paper-scissors/"
                       target="_blank"
                       ><img
-                        src="./img/image-gallery.jpg"
+                        src="./img/rps.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Rock, paper, scissors(Made with: HTML, CSS and JavaScript)
+                      Rock, paper, scissors (Made with: HTML, CSS and
+                      JavaScript)
                     </figcaption>
                   </figure>
                   <div class="text-center">
