--- a/index.html
+++ b/index.html
@@ -322,6 +322,35 @@
                     >
                   </div>
                 </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/modern-tech/"
+                      target="_blank"
+                      ><img
+                        src="./img/modern-tech.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Rock, paper, scissors (Made with: HTML, CSS and
+                      JavaScript)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/modern-tech"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/modern-tech/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
               </div>
             </div>
           </div>
