--- a/index.html
+++ b/index.html
@@ -326,8 +326,7 @@
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Rock, paper, scissors (Made with: HTML, CSS and
-                      JavaScript)
+                      Modern Tech (Made with: HTML, CSS and jQuery)
                     </figcaption>
                   </figure>
                   <div class="text-center">
