Updated the portfolio projects section by adding another design

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Modern Tech (Made with: HTML, CSS and jQuery)
+                      Modern Tech (Made with: HTML, CSS (Flexbox) and jQuery)
                     </figcaption>
                   </figure>
                   <div class="text-center">
@@ -339,6 +339,34 @@
                     <a
                       class="visit-site-button btn btn-info btn-sm"
                       href="https://ag1479.github.io/modern-tech/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/sports-indoor/"
+                      target="_blank"
+                      ><img
+                        src="./img/sports-indoor.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Sports Indoor (Made with: HTML, CSS (Grid) and jQuery)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/sports-indoor"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/sports-indoor/"
                       target="_blank"
                       >View site</a
                     >
