--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
             <p class="paragraphs">
               Information Technology graduate who is passionate about making
               responsive and user-friendly websites/html emails. For a little
-              over a year now, I've been studying the front-end side of web
-              development. To get a better idea of how much I know, you can view
-              my work <a class="portfolio-link" href="#portfolio-page">here</a>.
+              over a year now, I've been studying nothing but the front-end side
+              of web development. To get a better idea of how much I know, you
+              can view my work
+              <a class="portfolio-link" href="#portfolio-page">here</a>.
             </p>
             <br />
             <h2 class="subHeadings">My skills</h2>
