--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
         <div class="row">
           <div class="col-lg-12">
             <p class="footer-paragraph">
-              Copyright &copy; 2019&nbsp;&bull; Ashik
-              Gurung&nbsp;&bull;&nbsp;London based Front-end Developer
+              Copyright &copy; 2019&nbsp;&bull; Ashik Gurung&nbsp;&nbsp;<br />London
+              based Front-end Developer
             </p>
           </div>
         </div>
