--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                 <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
               </div>
+              <div class="col-lg-12 col-md-6 col-sm-6 p-5">
+                <i class="fab fa-mailchimp mailChimpIcon frontEndIcons"></i>
+                <h3 class="frontEndElements">Mailchimp</h3>
+              </div>
             </div>
           </div>
         </div>
