Updated the about me summary paragraph

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
               over a year now, I've been studying nothing but the front-end side
               of web development. To get a better idea of how much I know, you
               can view my work
-              <a class="portfolio-link" href="#portfolio-page">here</a>.
+              <a class="portfolio-link" href="#portfolio-page">here</a>. I've
+              also recently been able to use the MailChimp email marketing
+              system to create and send out campaigns.
             </p>
             <br />
             <h2 class="subHeadings">My skills</h2>
