--- a/index.html
+++ b/index.html
@@ -235,6 +235,35 @@
                     >
                   </div>
                 </div>
+                <div class="col-lg-12 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/newsletter/"
+                      target="_blank"
+                      ><img
+                        src="./img/foundations-email.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Promotional E-mail (Made with: Foundation 'Email
+                      Framework')
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/newsletter"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/newsletter/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
                 <h2 class="subHeadings">
                   Front-End Sites
                 </h2>
