--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="col-lg-12 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
-                      href="https://ag1479.github.io/newsletter/"
+                      href="https://ag1479.github.io/foundation-html-email/"
                       target="_blank"
                       ><img
                         src="./img/foundations-email.png"
@@ -252,13 +252,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/newsletter"
+                      href="https://github.com/ag1479/foundation-html-email"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/newsletter/"
+                      href="https://ag1479.github.io/foundation-html-email/"
                       target="_blank"
                       >View site</a
                     >
