--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav
           id="navbar"
           class="navbar navbar-dark navbar-expand-md sticky-top"
-          style="background-color:#223949"
+          style="background-color: #223949;"
         >
           <!-- #DB4437 -->
           <div class="container-fluid">
@@ -101,11 +101,11 @@
                 <i class="fab fa-js javascriptIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">Javascript</h3>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 p-5">
+              <!-- <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                 <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
-              </div>
-              <div class="col-lg-12 col-md-6 col-sm-6 p-5">
+              </div> -->
+              <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                 <i class="fab fa-mailchimp mailChimpIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">Mailchimp</h3>
               </div>
@@ -380,7 +380,7 @@
                     >
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
                       href="https://ag1479.github.io/sports-indoor/"
@@ -407,7 +407,7 @@
                       >View site</a
                     >
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
