--- a/index.html
+++ b/index.html
@@ -235,13 +235,42 @@
                     >
                   </div>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-12 p-4">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
                       href="https://ag1479.github.io/foundation-html-email/"
                       target="_blank"
                       ><img
                         src="./img/foundations-email.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Promotional E-mail (Made with: Foundation 'Email
+                      Framework')
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/foundation-html-email"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/foundation-html-email/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/photoshop-email/"
+                      target="_blank"
+                      ><img
+                        src="./img/ps-email.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
