--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Promotional E-mail (Made with: Foundation 'Email
+                      HTML E-mail Template (Made with: Foundation 'Email
                       Framework')
                     </figcaption>
                   </figure>
