Corrected a few errors.

--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/foundation-html-email"
+                      href="https://github.com/ag1479/photoshop-email"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/foundation-html-email/"
+                      href="https://ag1479.github.io/photoshop-email/"
                       target="_blank"
                       >View site</a
                     >
