--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
               of web development. To get a better idea of how much I know, you
               can view my work
               <a class="portfolio-link" href="#portfolio-page">here</a>. I've
-              also recently been able to use the MailChimp email marketing
-              system to create and send out campaigns.
+              also recently been able to use a few email marketing systems like
+              MailChimp and Salesforce Cloud to create and send out campaigns.
             </p>
             <br />
             <h2 class="subHeadings">My skills</h2>
@@ -106,8 +106,8 @@
                 <h3 class="frontEndElements">React</h3>
               </div> -->
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                <i class="fab fa-mailchimp mailChimpIcon frontEndIcons"></i>
-                <h3 class="frontEndElements">Mailchimp</h3>
+                <i class="fas fa-mail-bulk mailChimpIcon frontEndIcons"></i>
+                <h3 class="frontEndElements">ESP</h3>
               </div>
             </div>
           </div>
