--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
               can view my work
               <a class="portfolio-link" href="#portfolio-page">here</a>. I've
               also recently been able to use a few email marketing systems like
-              MailChimp and Salesforce Cloud to create and send out campaigns.
+              MailChimp and Salesforce Marketing Cloud to create and send out
+              campaigns.
             </p>
             <br />
             <h2 class="subHeadings">My skills</h2>
