--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     >
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
                       href="https://ag1479.github.io/foundation-html-email/"
@@ -260,6 +260,32 @@
                     <a
                       class="visit-site-button btn btn-info btn-sm"
                       href="https://ag1479.github.io/foundation-html-email/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div> -->
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a href="https://ag1479.github.io/vw-email/" target="_blank"
+                      ><img
+                        src="./img/vw-email.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Transactional E-mail (Made with: MJML Email Framework)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/vw-email"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/vw-email/"
                       target="_blank"
                       >View site</a
                     >
