--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Transactional E-mail (Made with: MJML Email Framework)
+                      Promotional E-mail (Made with: MJML Email Framework)
                     </figcaption>
                   </figure>
                   <div class="text-center">
