--- a/index.html
+++ b/index.html
@@ -484,19 +484,19 @@
                   ></a>
                   <p class="paragraphs">Linkedin</p>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
+                <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
                   <a href="https://twitter.com/AG0932988842" target="_blank"
                     ><i class="fab fa-twitter-square"></i
                   ></a>
                   <p class="paragraphs">Twitter</p>
-                </div>
+                </div> -->
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
                   <a href="mailto:itsashikgurung@gmail.com"
                     ><i class="fas fa-envelope-square"></i
                   ></a>
                   <p class="paragraphs">E-mail</p>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
+                <div class="col-lg-12 col-md-6 col-sm-6 col-12 p-5">
                   <a href="https://github.com/ag1479" target="_blank"
                     ><i class="fab fa-github-square"></i
                   ></a>
