--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -70,7 +70,6 @@
             </div>
           </div>
         </nav>
-
         <div id="about-page" class="pages">
           <div class="container">
             <h1 class="mainHeadings">About</h1>
