--- a/index.html
+++ b/index.html
@@ -435,6 +435,34 @@
                     >
                   </div>
                 </div>
+                <div class="col-lg-12 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/skype-landing-page/"
+                      target="_blank"
+                      ><img
+                        src="./img/skype landing page.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Skype Landing Page (Made with: HTML, CSS (Flexbox))
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/skype-landing-page"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/skype-landing-page/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
                 <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
