--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                       href="https://ag1479.github.io/yumi-tech/"
                       target="_blank"
                       ><img
-                        src="./img/yumi-tech.png"
+                        src="./img/yumi screenshot.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
@@ -156,7 +156,7 @@
                       href="https://ag1479.github.io/newsletter/"
                       target="_blank"
                       ><img
-                        src="./img/newsletter.png"
+                        src="./img/weekly newsletter screenshot.png.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
@@ -185,7 +185,7 @@
                       href="https://ag1479.github.io/online-receipt/."
                       target="_blank"
                       ><img
-                        src="./img/billing.png"
+                        src="./img/online bill screenshot.png.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
@@ -213,7 +213,7 @@
                       href="https://ag1479.github.io/iPhone-11/"
                       target="_blank"
                       ><img
-                        src="./img/iphone11.png"
+                        src="./img/iphone 11 screenshot.png.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
