Edited the slightly pixelated images with new ones

--- a/index.html
+++ b/index.html
@@ -153,39 +153,38 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
-                      href="https://ag1479.github.io/newsletter/"
+                      href="https://ag1479.github.io/iPhone-11/"
                       target="_blank"
                       ><img
-                        src="./img/weekly newsletter screenshot.png.png"
+                        src="./img/iphone 11 screenshot.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Newsletter E-mail (Made with: HTML & CSS)
+                      Promotional E-mail (Made with: HTML & CSS)
                     </figcaption>
                   </figure>
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/newsletter"
+                      href="https://github.com/ag1479/iPhone-11"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/newsletter/"
+                      href="https://ag1479.github.io/iPhone-11/"
                       target="_blank"
                       >View site</a
                     >
                   </div>
                 </div>
-
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
                       href="https://ag1479.github.io/online-receipt/."
                       target="_blank"
                       ><img
-                        src="./img/online bill screenshot.png.png"
+                        src="./img/online bill screenshot.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
@@ -210,26 +209,26 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
-                      href="https://ag1479.github.io/iPhone-11/"
+                      href="https://ag1479.github.io/newsletter/"
                       target="_blank"
                       ><img
-                        src="./img/iphone 11 screenshot.png.png"
+                        src="./img/weekly newsletter screenshot.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Promotional E-mail (Made with: HTML & CSS)
+                      Newsletter E-mail (Made with: HTML & CSS)
                     </figcaption>
                   </figure>
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/iPhone-11"
+                      href="https://github.com/ag1479/newsletter"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/iPhone-11/"
+                      href="https://ag1479.github.io/newsletter/"
                       target="_blank"
                       >View site</a
                     >
