--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                     >
                   </div>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-12 p-4">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
                       href="https://ag1479.github.io/skype-landing-page/"
@@ -457,6 +457,34 @@
                     <a
                       class="visit-site-button btn btn-info btn-sm"
                       href="https://ag1479.github.io/skype-landing-page/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/bmi-calculator/"
+                      target="_blank"
+                      ><img
+                        src="./img/bmi-calculator.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      BMI Calculator (Made with: HTML, CSS & Javascript)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/bmi-calculator/"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/bmi-calculator/"
                       target="_blank"
                       >View site</a
                     >
